# BiofeedbackAssistedMusic

./: .env  .gitignore  .gitmodules  MANIFEST.in  README.md  dev_setup.sh  main.py  pyproject.toml  requirements.txt  run_all.sh  run_gui.sh
UI/: Backend.py  Initiator.py
logs/: run.csv
offline_mode/: env_experiments.ipynb
offline_mode/biofeedback/: base_functions.py  bvp2hr_offline.ipynb  controller.py
offline_mode/biofeedback/config/: logging.conf
recordings/empatica/1hr_activity/: ACC.csv  BVP.csv  EDA.csv  HR.csv  IBI.csv  TEMP.csv  tags.csv
recordings/empatica/2min_rest/: ACC.csv  BVP.csv  EDA.csv  HR.csv  TEMP.csv
recordings/empatica/gym_12kmh/: BVP.csv  HR.csv  tags.csv
recordings/empatica/itai_15min_run_metronome/: bvp.pkl  run.csv
recordings/empatica/may_15min_run_metronome/: bvp.pkl  run.csv
recordings/empatica/walking_in_gym/: ACC.csv  BVP.csv  HR.csv  IBI.csv  TEMP.csv  conditions.txt  tags.csv
recordings/gym_12kmh/: ACC.csv  EDA.csv  TEMP.csv  conditions.txt
recordings/playlists/: playlist.txt
recordings/walking_in_gym/: EDA.csv
recordings/walking_metronome/: HR.csv
recordings/walking_metronome_100bpm/: conditions.txt
src/: HR2palyback.ipynb  HR_2_optimal_HR.ipynb  acc2sf_offline.ipynb  acc2sf_offline.py  acc_pipe.py  base_functions.ipynb  base_functions.py  controller.ipynb  controller.py  media_player.py
src/biofeedback/: acc2sf_offline.py  acc_pipe.py  base_functions.py  controller.py  hr_pipe.py  ibi_pipe.py  logger.py  main.py  media_player.py  run_all.py  settings.py  structs.py
src/playlist/: playlist.txt
(+9 files in other folders)
